FEAT: warning and error console log.

--- a/09 - Dev Tools Domination/index-START.html
+++ b/09 - Dev Tools Domination/index-START.html
@@ -26,8 +26,10 @@
     // Styled
 
     // warning!
+    console.warn('Watch out!')
 
     // Error :|
+    console.error('You have reached an error.')
 
     // Info
 
