--- a/30 - Whack A Mole/index-START.html
+++ b/30 - Whack A Mole/index-START.html
@@ -73,7 +73,14 @@
     setTimeout(() => timeUp = true, 10000)
   }
 
+  function bonk(e) {
+    if(!e.isTrusted) return; // cheater!
+    score++;
+    this.parentNode.classList.remove('up');
+    scoreBoard.textContent = score;
+  }
 
+  moles.forEach(mole => mole.addEventListener('click', bonk));
 
 
 </script>
